ex-1.08/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-todo-app-srv
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3000
