ex-1.08/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-to-todo
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ingress-todo-app-srv
          servicePort: 2346
